--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Github title page</title>
 </head>
 <body>
-  
+  <h1>Hi </h1>
 </body>
-  
+  <img src ="https://www.alamy.com/white-word-hi-in-black-oval-hi-logo-image177977004.html?imageid=6ACE14CC-CCDB-40B4-A043-FD59AC950A10&p=469545&pn=1&searchId=d404b11b83047231f0288cd93b886c6b&searchtype=0">
 </html>
