--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <html>
 <head>
   <title>Github title page</title>
-</head>
-<body>
+<body
+
+   <img src ="https://banner2.cleanpng.com/20180601/plw/avo0cipc2.webp">
   <h1>Hi </h1>
+  <h2>all about the premiour league</h2>
 </body>
+  </head>
   <img src ="https://banner2.cleanpng.com/20180601/plw/avo0cipc2.webp">
 </html>
