--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Github title page</title>
 <body
 
-   <img src ="https://banner2.cleanpng.com/20180601/plw/avo0cipc2.webp">
+   <img src ="https://w7.pngwing.com/pngs/127/860/png-transparent-premier-league-logo.png">
   <h1>Hi </h1>
   <h2>all about the premiour league</h2>
 </body>
