--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Github title page</title>
-<body
+<body>
 
    <img src ="https://w7.pngwing.com/pngs/127/860/png-transparent-premier-league-logo.png">
   <h1>Hi </h1>
