--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
    <img src ="https://w7.pngwing.com/pngs/127/860/png-transparent-premier-league-logo.png">
   <h2>if you don't want to listen me rattle on about the premier league her is a video  </h2>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/bAG7C969wcA?si=eBP9ZhZsQJpdi4AG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<h1>what are the last three teams the t have one the premier league</h1>
-
+<h1>what are the last three teams the that have one the premier league</h1>
+<h2>Manchester City have won the last three premier league titles </h2>
   
 </body>
   </head>
