--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <html>
 <head>
-  <title>Github title page</title>
+  <title>GitHub Title Page</title>
+  <style>
+    body {
+      background: linear-gradient(to bottom, lightblue, darkblue);
+      font-family: Arial, sans-serif;
+    }
+  </style>
+</head>
 <body>
-  <h1>Hi </h1>
-  <h2>all about the premier
-     league</h2>
-   <img src ="https://w7.pngwing.com/pngs/127/860/png-transparent-premier-league-logo.png">
-  <h2>if you don't want to listen me rattle on about the premier league here is a video  </h2>
-  <iframe width="560" height="315" src="https://www.youtube.com/embed/bAG7C969wcA?si=eBP9ZhZsQJpdi4AG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope;picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-<h1>what are the last three teams the that have one the premier league</h1>
-<h2>Manchester City have won the last three premier league titles </h2>
+  <h1>Hi</h1>
+  <h2>All About the Premier League</h2>
+  <img src="https://w7.pngwing.com/pngs/127/860/png-transparent-premier-league-logo.png" alt="Premier League Logo">
+  <h2>If you don't want to listen to me rattle on about the Premier League, here is a video:</h2>
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/bAG7C969wcA?si=eBP9ZhZsQJpdi4AG" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
   
+  <h1>What Are the Last Three Teams That Have Won the Premier League?</h1>
+  <h2>Manchester City have won the last three Premier League titles.</h2>
 </body>
-  </head>
-</html>
