--- a/index.html
+++ b/index.html
@@ -17,4 +17,7 @@
   
   <h1>What Are the Last Three Teams That Have Won the Premier League?</h1>
   <h2>Manchester City have won the last three Premier League titles.</h2>
+ <h2> Premier League is the best football league in England. It has 20 teams, and they play against each other every season to see who’s the best. Some of the best teams are Manchester United, Liverpool, Chelsea, and Manchester City. The teams try to win the most games to become the champions. Fans from all over the world watch the games, and the players are some of the best in the world <h2/>
+  
+  
 </body>
